tdf#98856 Prevent dragging on empty text boxes

Dragging a text box causes EndTextEdit to be triggered which deletes the text box because it's empty.
So just don't allow empty textboxes to be dragged around.

Change-Id: Iebe22dd453c7bde0cb9e460726a2f2f3e1e70b21